submarine-cloud/manifests/submarine-cluster/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: submarine-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: submarine-database
  template:
    metadata:
      labels:
        app: submarine-database
    spec:
      containers:
        - name: submarine-database
          image: apache/submarine:database-0.3.0-SNAPSHOT
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: submarine-database
spec:
  ports:
    - name: submarine-database
      port: 3306
      targetPort: 3306
  selector:
    app: submarine-database
