submarine-cloud/manifests/submarine-cluster/jupyter.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements. See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jupyter-notebook
  labels:
    app: jupyter
spec:
  selector:
    matchLabels:
      app: jupyter
  replicas: 1
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      containers:
        - name: jupyter
          image: apache/submarine:tf2.1.0-jupyter
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /home/jovyan
              name: jupyter-storage
      volumes:
        - name: jupyter-storage
          hostPath:
            path: /mnt/disks/submarine-jupyter
            type: DirectoryOrCreate
---
kind: Service
apiVersion: v1
metadata:
  name: jupyter-svc
spec:
  selector:
    app: jupyter
  ports:
    - port: 8888
