submarine-cloud/manifests/submarine-cluster/submarine-database.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: submarine-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: submarine-database
  template:
    metadata:
      labels:
        app: submarine-database
    spec:
      containers:
        - name: submarine-database
          image: apache/submarine:database-0.6.0-SNAPSHOT
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: submarine-database
spec:
  ports:
    - name: submarine-database
      port: 3306
      targetPort: 3306
  selector:
    app: submarine-database
